  - Refactor GitLab API usage to use either access_token or private_token depending on what was specified during login
  - Allow to use access_token for API requests
  - Fix project API listing returning empty list when first projects are not added to CI
  - Allow to define variables from YAML
  - Added support for CI skipped status
  - Fix broken yaml error saving
  - Rename type(s) to stage(s)
  - Add missing stage when doing retry
  - Require variable keys to be not-empty and unique
  
v7.13.1
  - Fix: user could steal specific runner
  - Fix: don't send notifications for jobs with allow_failure set
  - Fix invalid link to doc.gitlab.com

v7.13.0
  - Fix inline edit runner-description
  - Allow to specify image and services in yml that can be used with docker
  - Fix: No runner notification can see managers only
  - Fix service testing for slack
  - Ability to cancel all builds in commit at once
  - Disable colors in rake tasks automatically (if IO is not a TTY)
  - Implemented "rake env:info". Rake task to receive system information
  - Fix coverage calculation on commit page
  - Enhance YAML validation
  - Redirect back after authorization
  - Change favicon
  - Refactoring: Get rid of private_token usage in the frontend.
  - Allow to specify allow_failure for job
  - Build traces is stored in the file instead of database
  - Make the builds path configurable
  - Disable link to runner if it's not assigned to specific project
  - Store all secrets in config/secrets.yml
  - Encrypt variables
  - Allow to specify flexible list of types in yaml

v7.12.2
  - Revert: Runner without tag should pick builds without tag only

v7.12.1
  - Runner without tag should pick builds without tag only
  - Explicit error in the GitLab when commit not found.
  - Fix: lint with relative subpath
  - Update webhook example
  - Improved Lint stability
  - Add warning when .gitlab-ci.yml not found
  - Improved validation for .gitlab-ci.yml
  - Fix list of branches in only section