@@ -30,7 +30,7 @@ module ProjectStatus
   # only check for toggling build status within same ref.
   def last_commit_changed_status?
     ref = last_commit.ref
-    last_commits = commits.where(ref: ref).order('id DESC').limit(2)
+    last_commits = commits.where(ref: ref).last(2)
 
     if last_commits.size < 2
       false
@@ -40,6 +40,6 @@ module ProjectStatus
   end
 
   def last_commit_for_ref(ref)
-    commits.where(ref: ref).order('id DESC').first
+    commits.where(ref: ref).last
   end
 end
